--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1030,3 +1030,485 @@ header .small-menu {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+
+
+/*--------------------------------------------------------------
+# team
+--------------------------------------------------------------*/
+
+
+.about .row {
+  padding-bottom: 50px !important;
+}
+
+.about .content {
+  padding: 100px;
+  padding-top: 79px !important; 
+}
+
+/* .about .team-1:after {
+content: '';
+    width: 85px;
+    height: 85px;
+    position: absolute;
+    border-top: 2px solid #000;
+    border-right: 2px solid #000;
+    right: 0;
+    top: 0;
+    border-top-right-radius: 10px;
+}
+.about .team-2:after {
+content: '';
+    width: 85px;
+    height: 85px;
+    position: absolute;
+    border-bottom: 2px solid #000;
+    border-left: 2px solid #000;
+    left: 0;
+    bottom: 0;
+    border-bottom-left-radius: 10px;
+}
+
+.about .team-3:before {
+  content: '';
+      width: 85px;
+      height: 85px;
+      position: absolute;
+      border-bottom: 2px solid #000;
+      border-right: 2px solid #000;
+      right: 0;
+      bottom: 0;
+      border-bottom-right-radius: 10px;
+  }
+
+  .about .team-4::before {
+    content: '';
+        width: 85px;
+        height: 85px;
+        position: absolute;
+        border-top: 2px solid #000;
+        border-left: 2px solid #000;
+        left: 0;
+        top: 0;
+        border-top-left-radius: 10px;
+    } */
+
+
+.about .team-des {
+
+    color: #5a6f80;
+      font-size: 46px;
+      letter-spacing: -2px;
+      font-size: 46px !important;
+} 
+
+.about .team-name {
+  color: #5bc1ac;
+      font-size: 24px;
+} 
+
+.about .team-text {
+  padding-bottom: 10px;
+  color: #717275;
+    font-size: 17.5px !important;
+    font-weight: 300;
+}
+    
+.about .content h3 {
+  font-weight: 700;
+  font-size: 28px;
+  font-family: "Poppins", sans-serif;
+}
+
+.about .content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.about .content ul li {
+  padding: 0 0 8px 26px;
+  position: relative;
+}
+
+.about .content ul i {
+  position: absolute;
+  font-size: 20px;
+  left: 0;
+  top: -3px;
+  color: #ffc451;
+}
+
+.about .content p:last-child {
+  margin-bottom: 0;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .about .row {
+    padding-bottom: 30px !important;
+  }
+  
+  .about .content {
+    padding: 35px !important;
+    padding-top: 50px !important; 
+  }
+  .about .team-des {
+      font-size: 40px !important;
+} 
+}
+
+
+/*--------------------------------------------------------------
+# story
+--------------------------------------------------------------*/
+
+
+.our-story-wrapper  {
+  background-color: #f0f8ff;
+}
+
+.our-story-wrapper  {
+  
+  margin-bottom: 60px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #f0f8ff;
+}
+
+
+.our-story-wrapper .our-story-img {
+  border-radius: 20px;
+  height: 610px;
+      width: 100%;
+      object-fit: cover;
+      box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+    
+}
+
+
+.our-story-wrapper .our-story {
+  margin-top: 50px;
+
+  border-radius: 20px;
+  padding: 40px !important;
+  background-color: white;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+}
+
+.our-story-wrapper .our-story-heading {
+  color: #5a6f80;
+    font-size: 46px;
+    letter-spacing: -2px;
+}
+
+.our-story-wrapper .our-story-sec-heading {
+  color: #5bc1ac;
+    font-size: 24px;
+}
+
+.our-story-wrapper .our-story-text {
+  padding-bottom: 10px;
+  color: #717275;
+    font-size: 17.5px !important;
+    font-weight: 300;
+}
+
+.our-story-wrapper .img-wrapper {
+  padding-right: 30px !important;
+}
+
+@media only screen and (max-width: 600px) {
+  .our-story-wrapper .our-story {
+    margin: 15px !important;
+    margin-left: 15px !important;
+  }
+  .our-story-wrapper .img-wrapper {
+    padding-right: 15px !important;
+}
+.our-story-wrapper .our-story-img {
+  height: auto;
+  object-fit: contain;
+}
+}
+
+
+
+.founder-section {
+  padding: 50px 0;
+}
+.founder-image {
+  height: 520px;
+  width: 100%;
+  object-fit: cover;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,.175)!important;
+  border-radius: 20px;
+}
+.founder-content {
+  text-align: center;
+}
+
+.imc {
+  height: 95px;
+  width: 180px;
+  object-fit: cover;
+}
+
+
+
+/*--------------------------------------------------------------
+# donation section
+--------------------------------------------------------------*/
+
+
+.cta-section {
+  position: relative;
+  overflow: hidden;
+}
+.section-bg {
+  background-color: #f0f8ff;
+}
+.section-padding {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+
+.cta-section h2 {
+  color: #5a6f80;
+    font-size: 46px;
+    letter-spacing: -2px;
+    font-weight: 700;
+}
+
+@media screen and (max-width: 991px) {
+  .cta-section h2 {
+    color: #5a6f80;
+      font-size: 35px;
+      letter-spacing: -2px;
+      font-weight: 600;
+  }
+}
+
+.cta-section::before {
+  content: "";
+  background-color: #5bc1ac;
+  border-radius: 50%;
+  position: absolute;
+  top: -100px;
+  left: -30px;
+  margin: auto;
+  width: 200px;
+  height: 200px;
+}
+
+
+.cta-section::after {
+  content: "";
+  border: 20px solid #597081;
+  border-radius: 50%;
+  position: absolute;
+  bottom: -100px;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 150px;
+  height: 150px;
+}
+
+
+.cta-section .custom-btn {
+  background: #5a6f80;
+  border: 2px solid transparent;
+  border-radius: 100px;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+  padding: 15px 25px;
+} 
+
+.cta-section .donation-btn-1 {
+  font-size: 20px !important;
+}
+
+.cta-section a {
+  color: #717275;
+  text-decoration: none;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .cta-section .margin-btm {
+    margin-top: 15px;
+  }
+}
+
+
+/*--------------------------------------------------------------
+# values
+--------------------------------------------------------------*/
+
+
+.our-values .custom-block-body {
+    padding: 30px !important;
+}
+
+
+.our-values .value-heading {
+  color: #5bc1ac !important;
+  font-size: 24px !important;
+}
+
+
+.our-values .value-text {
+  color: #717275;
+  font-size: 18px;
+  font-weight: 400;
+  height: 90px;
+}
+
+
+.our-values .custom-block .custom-btn {
+  border-radius: 0;
+  display: block;
+}
+.our-values .custom-btn {
+  background: #5a6f80;
+  border: 2px solid transparent;
+  border-radius: 100px;
+  color: white;
+  font-size: 21px;
+  font-weight: 500;
+  line-height: normal;
+  padding: 15px 25px;
+}
+
+.our-values .custom-block-wrap {
+  background: white;
+  border-radius: 20px;
+  position: relative;
+  overflow: hidden;
+  transition: all 0.5s;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+}
+
+@media only screen and (max-width: 600px) {
+  .our-values img {
+    width: 100%;
+  }
+}
+
+
+
+
+/*--------------------------------------------------------------
+# swiper
+--------------------------------------------------------------*/
+
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  /* width: 100%; */
+  height: 100%;
+  object-fit: contain;
+}
+
+.swiper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*--------------------------------------------------------------
+# reports page
+--------------------------------------------------------------*/
+
+
+
+
+.annual-report-heading {
+  color: #5a6f80;
+    font-size: 46px;
+    letter-spacing: -2px;
+    font-weight: 700;
+}
+
+
+.annual-report .custom-block-body {
+  padding: 30px !important;
+}
+
+.annual-report .row {
+ margin-bottom: 30px;
+}
+
+
+.annual-report .value-heading {
+color: #5bc1ac !important;
+font-size: 24px !important;
+text-align: center;
+}
+
+
+.annual-report .value-text {
+color: #717275;
+font-size: 18px;
+font-weight: 400;
+height: 90px;
+}
+
+
+.annual-report .custom-block .custom-btn {
+border-radius: 0;
+display: block;
+}
+.annual-report .custom-btn {
+background: #5a6f80;
+border: 2px solid transparent;
+border-radius: 100px;
+color: white;
+font-size: 21px;
+font-weight: 500;
+line-height: normal;
+padding: 15px 25px;
+}
+
+.annual-report .custom-block-wrap {
+background: white;
+border-radius: 20px;
+position: relative;
+overflow: hidden;
+transition: all 0.5s;
+box-shadow: 0 1rem 3rem rgba(0,0,0,.175);
+}
+
+.annual-report .img-con {
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.annual-report .annual-2021 {
+  width: 100% !important;
+}
+
+@media only screen and (max-width: 600px) {
+.annual-report img {
+  width: 100%;
+}
+}
